# snake

./: .gitignore  Cargo.toml  README.md  dev.md  flake.nix
backend/: Cargo.toml  TODO  clip.fe.yml  dep.yml  flake.nix
backend/conf/: default.yaml  local.yaml  prod.yaml  production.yaml
backend/src/: conf.rs  error.rs  lib.rs  main.rs  server.rs  startup.rs
backend/src/mp/: con_state.rs  mod.rs
backend/src/mp/lobby/: lobbies.rs  lobby.rs  lobby_con_state.rs  mod.rs  state.rs  usernames.rs
backend/src/routes/: imports.rs  mod.rs  snake.rs  snake_ws.rs
backend/tests/app/: health_check.rs  helpers.rs
common/interfacing/: Cargo.toml
common/interfacing/src/: snake.rs
fe_server/: Cargo.toml
fe_server/conf/: default.yml  local.yaml  prod.yaml
fe_server/src/: conf.rs  main.rs  serve_files.rs  server.rs
frontend/: .gitignore  Cargo.toml  TODO  clip.fe.yml  dep.yml  flake.nix  rust-toolchain.toml
frontend/src/: app.rs  main.rs  router.rs  switch.rs
frontend/src/components/: imports.rs  mod.rs  state.rs
frontend/src/components/snake/: comp.rs
frontend/src/components/theme/: theme_ctx.rs  themes.rs
k8s/: k-apply-all.sh  ngx.ing.yml  registry.md
server/: Cargo.toml  README.md
server/conf/: default.yml
server/src/: conf.rs  main.rs  serve_files.rs  trace.rs
