[workspace]
resolver = "2"
members = [
  "backend",
  "frontend",
  "fe_server",
  "common/auth",
  "common/interfacing",
  "common/domain",
  "common/static_routes",
]

[workspace.dependencies]
tokio = { version = "1.26.0", features = ["rt", "macros", "rt-multi-thread"] }
config = { version = "0.13.3", default-features = false, features = ["yaml"] }
hyper = "0.14.27"
tracing = { version = "0.1.37", default-features = false }
tracing-log = "0.1.3"
tracing-subscriber = { version = "0.3.17", default-features = false, features = ["env-filter", "ansi"] }
tower = "0.4.13"
tower-http = { version = "0.4.0", features = ["trace", "request-id", "add-extension", "util", "compression-gzip"] }
serde-aux = { version = "4.2.0", default-features = false }
serde = { version = "1.0.183", default-features = false, features = ["derive"] }
axum = { version = "0.6.20", features = ["headers", "ws"] }
derive_more = { version = "0.99.17", default-features = false, features = ["display"] }
serde_json = "1.0.113"
strum = { version = "0.26.1", features = ["derive"] }
derived-deref = "2.1.0"
reqwest = { version = "0.11.14", default-features = false, features = ["cookies"] }
envtestkit = { version = "1.1.2", default-features = false, features = ["lock"] }
