[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "backend"

[dependencies]
interfacing = { path = "../common/interfacing" }
static_routes = { path = "../common/static_routes" }
domain = { path = "../common/domain" }
auth = { path = "../common/auth" }

config = { version = "0.13.3", default-features = false, features = ["yaml"] }
hyper = "0.14.24"
tokio = { version = "1.26.0", features = ["rt", "macros", "rt-multi-thread"] }
tower = "0.4.13"
tower-http = { version = "0.4.0", features = ["trace", "request-id", "add-extension", "util", "compression-gzip"] }
tracing = { version = "0.1.37", features = ["log"] }
tracing-log = "0.1.3"
tracing-subscriber = { version = "0.3.16", default-features = false, features = ["registry", "env-filter", "ansi"] }
serde-aux = "4.1.2"
reqwest = { version = "0.11.14", default-features = false, features = ["json", "rustls-tls", "cookies"] }
thiserror = "1.0.39"
futures-util = "0.3.28"
serde = { version = "1.0.183", default-features = false, features = ["derive"] }
anyhow = "1.0.71"
serde_json = "1.0.94"
axum-macros = "0.3.8"
axum = { version = "0.6.20", features = ["headers", "ws"] }
url = "2.4.1"
derived-deref = "2.1.0"
bidirectional-map = "0.1.4"
rand = "0.8.5"
strum = "0.26.1"
derive_more = { version = "0.99.17", default-features = false, features = ["display"] }

[dev-dependencies]
once_cell = "1.17.1"
envtestkit = { version = "1.1.2", default-features = false, features = ["lock"] }