[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "backend"

[dependencies]
interfacing = { path = "../common/interfacing" }
static_routes = { path = "../common/static_routes" }
domain = { path = "../common/domain" }
auth = { path = "../common/auth" }

tokio.workspace = true
config.workspace = true
hyper.workspace = true
tracing.workspace = true
tracing-log.workspace = true
tracing-subscriber.workspace = true
tower.workspace = true
tower-http.workspace = true
serde-aux.workspace = true
serde.workspace = true
serde_json.workspace = true
axum.workspace = true
derive_more.workspace = true
strum.workspace = true


thiserror = "1.0.39"
futures-util = "0.3.28"
anyhow = "1.0.71"
axum-macros = "0.3.8"
url = "2.4.1"
derived-deref = "2.1.0"
bidirectional-map = "0.1.4"
rand = "0.8.5"


[dev-dependencies]
reqwest.workspace = true
envtestkit.workspace = true
once_cell = "1.17.1"