[package]
name = "fe_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio.workspace = true
config.workspace = true
hyper.workspace = true
tracing.workspace = true
tracing-log.workspace = true
tracing-subscriber.workspace = true
tower.workspace = true
tower-http.workspace = true
serde-aux.workspace = true
serde.workspace = true
serde_json.workspace = true
axum.workspace = true
derive_more.workspace = true

bytes = "1.5.0"
httpdate = "1.0.3"
include_dir = { version = "0.7.3", features = ["metadata"] }
mime_guess = "2.0.4"

[dev-dependencies]
reqwest.workspace = true
envtestkit.workspace = true
