[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
interfacing = { path = "../common/interfacing" }
static_routes = { path = "../common/static_routes" }

serde.workspace = true
serde_json.workspace = true
derived-deref.workspace = true

# Must match version in flake.nix
wasm-bindgen = "=0.2.89"

gloo-console = "0.2.3"
gloo-net = { version = "0.2.6", features = ["websocket"] }
gloo-storage = "0.2.2"
gloo-timers = "0.3.0"
gloo-events = "0.2.0"
gloo-utils = "0.2.0"

stylist = { version = "0.12.0", features = ["yew", "parser"] }
yew = { version = "0.20.0", features = ["csr"] }
yew-router = "0.17.0"
thiserror = "1.0.40"
anyhow = "1.0.71"
futures = "0.3.28"
js-sys = "0.3.64"
wasm-bindgen-futures = "0.4.37"
derivative = "2.2.0"
tokio = { version = "1.35.1", default-features = false, features = ["sync"] }

[dependencies.web-sys]
version = "0.3.61"
features = ["HtmlCanvasElement", "CanvasRenderingContext2d"]
