[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.20"
bytes = "1.5.0"
config = { version = "0.13.3", default-features = false, features = ["yaml"] }
derive_more = { version = "0.99.17", default-features = false, features = ["display"] }
httpdate = "1.0.3"
hyper = "0.14.27"
include_dir = { version = "0.7.3", features = ["metadata"] }
mime_guess = "2.0.4"
serde = { version = "1.0.183", default-features = false, features = ["derive"] }
serde-aux = { version = "4.2.0", default-features = false }
tokio = { version = "1.31.0", features = ["macros", "rt-multi-thread"] }
tower = "0.4.13"
tower-http = { version = "0.4.3", features = ["trace", "request-id",  "util", "compression-gzip"] }
tracing = { version = "0.1.37", default-features = false }
tracing-log = "0.1.3"
tracing-subscriber = { version = "0.3.17", default-features = false, features = ["env-filter", "ansi"] }

[dev-dependencies]
envtestkit = { version = "1.1.2", default-features = false, features = ["lock"] }
reqwest = { version = "0.11.18", default-features = false }
