[package]
name = "interfacing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde.workspace = true
serde_json.workspace = true
strum.workspace = true

secrecy = { version = "0.8.0", features = ["serde"] }
humantime = "2.1.0"
